# TinCan

./: CMakeLists.txt
TinCan/: SerialPort.cpp  SerialPort.hpp  SerialPortInfo.cpp  SerialPortInfo.hpp
TinCan/Posix/: PosixSerialPortImpl.cpp  PosixSerialPortImpl.hpp
